# Contract_Analysis

./: .gitignore  app.py  delete.py  delete_index.py  pyproject.toml  requirements.txt  test.py
config/: settings.py
core/: memory.py  prompt_manager.py
graph/: entity_extractor.py  graph_builder.py  graph_client.py
ingestion/: chunker.py  document_loader.py  embedder.py  vector_store.py
llm/: answer_generator.py  azure_openai_client.py
prompts/: answer_prompt.md  entity_extraction_prompt.md  scope_guard_prompt.md  summarization_prompt.md
retrieval/: langgraph_pipeline.py  query_engine.py  semantic_retriever.py
ui/: tab_query.py  tab_upload.py
