[project]
name = "contract-intelligence-graphrag"
version = "0.1.0"
description = "AI-powered contract intelligence platform using GraphRAG architecture"
requires-python = ">=3.11"
 
[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "ingestion*", "graph*", "retrieval*", "llm*", "ui*"]
 
[tool.pytest.ini_options]
pythonpath = ["."]
 
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:BuildBackend"
 